--- a/web/coursework/public/styles.css
+++ b/web/coursework/public/styles.css
@@ -2,6 +2,11 @@
     border: 2px solid #000000;
 }
 
+.lgota {
+    border: 1px solid #98a598;
+    width: 350px;
+}
+
 .goodAlert {
     color: #20a900;
     background-color: #cbf2cf;
@@ -19,4 +24,62 @@
     border: 1px solid #ebaba7;
     border-radius: 4px;
 }
-.hidden { display:none; }
+.hidden {
+    display:none;
+}
+
+.ggg {
+}
+
+body {
+    background-color: rgba(36, 213, 34, 0.37);
+    margin: 0;
+}
+
+.header {
+    background-color: rgba(45, 50, 213, 0.37);
+    padding: 3px;
+    text-align: center;
+}
+
+/* Create three unequal columns that floats next to each other */
+.column {
+    float: left;
+    padding: 5px;
+}
+
+/* Left and right column */
+.column.side {
+    width: 32%;
+}
+
+form { margin: 0 auto; }
+
+/* Middle column */
+.column.middle {
+    text-align: center;
+    width: 68%;
+    background-color: rgba(36, 213, 34, 0.37);
+}
+
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+/* Responsive layout - makes the three columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 600px) {
+    .column.side, .column.middle {
+        width: 100%;
+    }
+
+    .canvas {
+        height: 350px;
+        width: 350px;
+    }
+
+    .ggg {
+        padding-left: 30%;
+    }
+}
